# TPEInteractive

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: BUILDING.md  DEVELOPMENT.md  EXAMPLES.md  USAGE.md
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Config/: Config.h
src/Data/: MeshData.h  SceneDefinition.h
src/Engine/: RepulsorEngine.cpp  RepulsorEngine.h  VisualizationEngine.cpp  VisualizationEngine.h
src/Examples/: EmbeddedMeshData.h  ExampleLoader.cpp  ExampleLoader.h  FCCLatticeSpheres.h
src/Scene/: SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h
src/UI/: UIManager.cpp  UIManager.h
src/Utils/: BLASLAPACK_Types.h  GlobalTypes.h  Helpers.cpp  Helpers.h
